# sync-iphone-screenshots

./: .gitignore  README.md  config.yaml.example  pyproject.toml
src/iphone_crop_uncook/: config.py  scan.py
