[project]
name = "iphone-crop-uncook"
version = "0.1.0"
description = "Recover lossless PNG crops from iPhone screenshots that Apple Photos re-encoded as JPEG"
requires-python = ">=3.12"
dependencies = [
    "osxphotos>=0.69.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.1.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.3",
]

[project.scripts]
scan = "iphone_crop_uncook.scan:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iphone_crop_uncook"]
